docs/es-ocp-e2e/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-ocp-e2e
  labels:
    app: es-ocp-e2e
spec:
  selector:
    app: es-ocp-e2e
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
